Riorganizzata in meglio la gerarchia dei file, e migliorata ancora un pochino la struttura in generale.

--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<link href="style.css" rel="stylesheet">
+		<link href="styles/fonts.css" rel="stylesheet">
+		<link href="styles/main.css" rel="stylesheet">
 		<title>BRkMeG's site</title>
 		<meta name="author" content="BRkMeG">
 		<meta name="description" content="Il mio sito personale / My personal site">
@@ -13,8 +14,8 @@
 		<header>
 			<p id="main_title">This is me.</p>
 			<div>
-				<p>Per gli amici bro, bruschian, brijian, broski.</p>
-				<p>Oppure semplicemente Brian.</p>
+				<span id="am1">Per gli amici bro, bruschian, brijian, broski.</span>
+				<span id="am2">Oppure semplicemente Brian.</span>
 				<p id="welcome_line">E benvenuto/a nel mio blog personale.</h3>
 				<p>Il mio tratto principale? Il ripudio per masse e omologazioni.</p>
 				<p>Sempre? No. Ma spesso.</p>
