Migliorie ulteriori, aggiunto il padding e sembra che da pc sia piacevole da vedere. Ora Provo a vedere se si puo' far collassare l'intestazione, altrimenti bruh Prima di far casini meglio se faccio un commit

--- a/index.html
+++ b/index.html
@@ -16,23 +16,25 @@
 			<div>
 				<span id="am1">Per gli amici bro, bruschian, brijian, broski.</span>
 				<span id="am2">Oppure semplicemente Brian.</span>
-				<p id="welcome_line">E benvenuto/a nel mio blog personale.</h3>
-				<p>Il mio tratto principale? Il ripudio per masse e omologazioni.</p>
-				<p>Sempre? No. Ma spesso.</p>
+				<br>
+				<p id="welcome_line">E benvenuto/a nel mio blog personale.</p>
+				<p>Il mio tratto principale? Odio per masse e omologazioni.</p>
+				<p id="snms">Sempre? No. Ma spesso.</p>
 			</div>
 		</header>
+
+
+
+
+
+
+		<footer>
+			<p>Contatti: <a href="mailto:brgrv4@tutanota.com">brgrv4@tutanota.com</a></p>
+			<p>Nient'altro? Eh già.</p>
+		</footer>
+
+
+
+
 	</body>
-
-
-
-
-
-
-
-
-	<footer>
-		<p>Contatti: <a href="mailto:brgrv4@tutanota.com">brgrv4@tutanota.com</a></p>
-		<p>Nient'altro? Si.</p>
-	</footer>
-
 </html>
