Non mi ricordo che modifiche ho fatto di preciso, pero sempre meglio salvare

--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
 	</head>
 
 
-
 	<body>
 		<header>
 			<p id="main_title">This is me.</p>
@@ -21,19 +20,14 @@
 				<p>Il mio tratto principale? Odio per masse e omologazioni.</p>
 				<p id="snms">Sempre? No. Ma spesso.</p>
 			</div>
+			</details>
 		</header>
-
-
-
-
 
 
 		<footer>
 			<p>Contatti: <a href="mailto:brgrv4@tutanota.com">brgrv4@tutanota.com</a></p>
 			<p>Nient'altro? Eh già.</p>
 		</footer>
-
-
 
 
 	</body>
