--- a/index.html
+++ b/index.html
@@ -23,7 +23,71 @@
 			</details>
 		</header>
 
+	
+		<main>
+			<div id="tags">
+				<p id="interests">I miei interessi?</p>
+				<ul>
+					<li><a class="tag">#privacy</a></li><br>
+					<li><a class="tag">#linux</a></li><br>
+					<li><a class="tag">#gaming</a></li><br>
+					<li><a class="tag">#tech</a></li><br>
+					<li><a class="tag">#photos</a></li><br>
+					<li><a class="tag">#thoughts</a></li><br>
+					<li><a class="tag">#uni</a></li><br>
+					<li><a class="tag">#alternative</a></li><br>
+					<li><a class="tag">#trips</a></li><br>
+					<li><a class="tag">#...</a></li><br>
+				</ul>
+			</div>
 
+
+
+
+
+			<div id="articles">
+				<p id="rec_arts">Articoli recenti:</p>
+				<ul>
+					<li>
+						<p id="art_title">Il mio viaggio alla scoperta della mia distro.</p>
+						<span id="TLDR">TLDR: </span>
+						<span id="art_tldr">A quali sistemi operativi la mia fame di smanettamento mi ha condotto</span>
+						<p id="rel_tags">#linux</p>
+					</li>
+					<li>
+						<p id="art_title">Il mio viaggio alla scoperta della mia distro.</p>
+						<span id="TLDR">TLDR: </span>
+						<span id="art_tldr">A quali sistemi operativi la mia fame di smanettamento mi ha condotto</span>
+						<p id="rel_tags">#linux</p>
+					</li>
+					<li>
+						<p id="art_title">Il mio viaggio alla scoperta della mia distro.</p>
+						<span id="TLDR">TLDR: </span>
+						<span id="art_tldr">A quali sistemi operativi la mia fame di smanettamento mi ha condotto</span>
+						<p id="rel_tags">#linux</p>
+					</li>
+					<li>
+						<p id="art_title">Il mio viaggio alla scoperta della mia distro.</p>
+						<span id="TLDR">TLDR: </span>
+						<span id="art_tldr">A quali sistemi operativi la mia fame di smanettamento mi ha condotto</span>
+						<p id="rel_tags">#linux</p>
+					</li>
+				</ul>
+			</div>
+
+
+
+
+		</main>
+
+
+
+
+
+
+
+
+		
 		<footer>
 			<p>Contatti: <a href="mailto:brgrv4@tutanota.com">brgrv4@tutanota.com</a></p>
 			<p>Nient'altro? Eh già.</p>
