Nessuna migliora estetica, ma migliorato di brutto il layout della sezione <main> per mobile. Se per desktop, articoli e tag vengono messi uno accanto all'altro; se per mobile, invece, articoli e tag vengono messi uno dopo l'altro, almeno non diventa tutto schiacciato. Direi un ottimo lavoro.

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 		<title>BRkMeG's site</title>
 		<meta name="author" content="BRkMeG">
 		<meta name="description" content="Il mio sito personale / My personal site">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
 	</head>
 
 
