Creato mobile.css per gestire meglio la parte mobile, aggiunta la barra in alto "sito in costruzione" e nient'altro

--- a/index.html
+++ b/index.html
@@ -3,14 +3,21 @@
 	<head>
 		<link href="styles/fonts.css" rel="stylesheet">
 		<link href="styles/main.css" rel="stylesheet">
+		<link href="styles/mobile.css" rel="stylesheet">
+
 		<title>BRkMeG's site</title>
 		<meta name="author" content="BRkMeG">
 		<meta name="description" content="Il mio sito personale / My personal site">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<meta charset="UTF-8">
+		<meta lang="it">
 	</head>
 
 
 	<body>
+	
+		<p id="under_con">Sito sotto costruzione🔨🏗️</p>
+
 		<header>
 			<p id="main_title">This is me.</p>
 			<div>
