--- a/index.html
+++ b/index.html
@@ -11,11 +11,12 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<meta charset="UTF-8">
 		<meta lang="it">
+		<script src="scripts/main.js" defer></script>
 	</head>
 
 
 	<body>
-	
+		
 		<p id="under_con">Sito sotto costruzione🔨🏗️</p>
 
 		<header>
@@ -35,17 +36,47 @@
 		<main>
 			<div id="tags">
 				<p id="interests">I miei interessi?</p>
-				<ul>
-					<li><a class="tag">#privacy</a></li><br>
-					<li><a class="tag">#linux</a></li><br>
-					<li><a class="tag">#gaming</a></li><br>
-					<li><a class="tag">#tech</a></li><br>
-					<li><a class="tag">#photos</a></li><br>
-					<li><a class="tag">#thoughts</a></li><br>
-					<li><a class="tag">#uni</a></li><br>
-					<li><a class="tag">#alternative</a></li><br>
-					<li><a class="tag">#trips</a></li><br>
-					<li><a class="tag">#...</a></li><br>
+				<ul id="listag">
+					<li class="li1">
+						<a class="tag">#privacy</a>
+					</li>
+					<br><br>
+					<li class="li2">
+						<a class="tag">#linux</a>
+					</li>
+					<br><br>
+					<li class="li3">
+						<a class="tag">#gaming</a>
+					</li>
+					<br><br>
+					<li class="li1">
+						<a class="tag">#tech</a>
+					</li>
+					<br><br>
+					<li class="li2">
+						<a class="tag">#photos</a>
+					</li>
+					<br><br>
+					<li class="li3">
+						<a class="tag">#thoughts</a>
+					</li>
+					<br><br>
+					<li class="li1">
+						<a class="tag">#uni</a>
+					</li>
+					<br><br>
+					<li class="li2">
+						<a class="tag">#alternative</a>
+					</li>
+					<br><br>
+					<li class="li3">
+						<a class="tag">#trips</a>
+					</li>
+					<br><br>
+					<li class="li1">
+						<a class="tag">#...</a>
+					</li>
+					<br><br>
 				</ul>
 			</div>
 
@@ -57,28 +88,31 @@
 				<p id="rec_arts">Articoli recenti:</p>
 				<ul>
 					<li>
-						<p id="art_title">Il mio viaggio alla scoperta della mia distro.</p>
-						<span id="TLDR">TLDR: </span>
-						<span id="art_tldr">A quali sistemi operativi la mia fame di smanettamento mi ha condotto</span>
-						<p id="rel_tags">#linux</p>
+						<p class="art_title">Il mio viaggio alla scoperta della mia distro.</p>
+						<span class="TLDR">TLDR: </span>
+						<span class="art_tldr">A quali sistemi operativi la mia fame di smanettamento mi ha condotto.</span>
+						<p class="rel_tags">#linux</p>
 					</li>
+					<br>
 					<li>
-						<p id="art_title">Il mio viaggio alla scoperta della mia distro.</p>
-						<span id="TLDR">TLDR: </span>
-						<span id="art_tldr">A quali sistemi operativi la mia fame di smanettamento mi ha condotto</span>
-						<p id="rel_tags">#linux</p>
+						<p class="art_title">La scalata del monte Celeste.</p>
+						<span class="TLDR">TLDR: </span>
+						<span class="art_tldr">Recensione del videogioco Celeste, uscito nel 2018.</span>
+						<p class="rel_tags">#gaming</p>
 					</li>
+					<br>
 					<li>
-						<p id="art_title">Il mio viaggio alla scoperta della mia distro.</p>
-						<span id="TLDR">TLDR: </span>
-						<span id="art_tldr">A quali sistemi operativi la mia fame di smanettamento mi ha condotto</span>
-						<p id="rel_tags">#linux</p>
+						<p class="art_title">Guardare YouTube in un altro modo? NewPipe!</p>
+						<span class="TLDR">TLDR: </span>
+						<span class="art_tldr">Funzionalita' di NewPipe, client alternativo all'app stock di YouTube.</span>
+						<p class="rel_tags">#alternative</p>
 					</li>
+					<br>
 					<li>
-						<p id="art_title">Il mio viaggio alla scoperta della mia distro.</p>
-						<span id="TLDR">TLDR: </span>
-						<span id="art_tldr">A quali sistemi operativi la mia fame di smanettamento mi ha condotto</span>
-						<p id="rel_tags">#linux</p>
+						<p class="art_title">Perche' mai un blog personale?</p>
+						<span class="TLDR">TLDR: </span>
+						<span class="art_tldr">I motivi che mi hanno spinto a creare un blog e a non utilizzare i classici social media.</span>
+						<p class="rel_tags">#thoughts</p>
 					</li>
 				</ul>
 			</div>
