Ritoccato un parametro per mobile e aggiunto il favicon :)

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 		<link href="styles/fonts.css" rel="stylesheet">
 		<link href="styles/main.css" rel="stylesheet">
 		<link href="styles/mobile.css" rel="stylesheet">
+		<link href="favicon.png" type="image/x-icon" rel="icon">
 
 		<title>BRkMeG's site</title>
 		<meta name="author" content="BRkMeG">
