Cambiato da BRkMeG a linerd.github.io , cambiato il titolo nell'index

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 		<link href="styles/mobile.css" rel="stylesheet">
 		<link href="favicon.png" type="image/x-icon" rel="icon">
 
-		<title>BRkMeG's site</title>
+		<title>Linerd's site</title>
 		<meta name="author" content="BRkMeG">
 		<meta name="description" content="Il mio sito personale / My personal site">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
