Mi prendo una bella pausa, comunque ho sistemato molto la sezione degli articoli recenti, messo un nuovo font e migliorato un po' l'header per mobile.

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 				<span id="am2">Oppure semplicemente Brian.</span>
 				<br>
 				<p id="welcome_line">E benvenuto/a nel mio blog personale.</p>
-				<p>Il mio tratto principale? Odio per masse e omologazioni.</p>
+				<p id="tpomo">Il mio tratto principale? Odio per masse e omologazioni.</p>
 				<p id="snms">Sempre? No. Ma spesso.</p>
 			</div>
 			</details>
@@ -39,39 +39,39 @@
 				<p id="interests">I miei interessi?</p>
 				<ul id="listag">
 					<li class="li1">
-						<a class="tag">#privacy</a>
+						<a class="tag" href="">#privacy</a>
 					</li>
 					<br><br>
 					<li class="li2">
-						<a class="tag">#linux</a>
+						<a class="tag" href="">#linux</a>
 					</li>
 					<br><br>
 					<li class="li3">
-						<a class="tag">#gaming</a>
+						<a class="tag" href="">#gaming</a>
 					</li>
 					<br><br>
 					<li class="li1">
-						<a class="tag">#tech</a>
+						<a class="tag" href="">#tech</a>
 					</li>
 					<br><br>
 					<li class="li2">
-						<a class="tag">#photos</a>
+						<a class="tag" href="">#photos</a>
 					</li>
 					<br><br>
 					<li class="li3">
-						<a class="tag">#thoughts</a>
+						<a class="tag" href="">#thoughts</a>
 					</li>
 					<br><br>
 					<li class="li1">
-						<a class="tag">#uni</a>
+						<a class="tag" href="">#uni</a>
 					</li>
 					<br><br>
 					<li class="li2">
-						<a class="tag">#alternative</a>
+						<a class="tag" href="">#alternative</a>
 					</li>
 					<br><br>
 					<li class="li3">
-						<a class="tag">#trips</a>
+						<a class="tag" href="">#trips</a>
 					</li>
 					<br><br>
 					<li class="li1">
@@ -88,28 +88,28 @@
 			<div id="articles">
 				<p id="rec_arts">Articoli recenti:</p>
 				<ul>
-					<li>
+					<li class="article">
 						<p class="art_title">Il mio viaggio alla scoperta della mia distro.</p>
 						<span class="TLDR">TLDR: </span>
 						<span class="art_tldr">A quali sistemi operativi la mia fame di smanettamento mi ha condotto.</span>
 						<p class="rel_tags">#linux</p>
 					</li>
 					<br>
-					<li>
+					<li class="article">
 						<p class="art_title">La scalata del monte Celeste.</p>
 						<span class="TLDR">TLDR: </span>
 						<span class="art_tldr">Recensione del videogioco Celeste, uscito nel 2018.</span>
 						<p class="rel_tags">#gaming</p>
 					</li>
 					<br>
-					<li>
+					<li class="article">
 						<p class="art_title">Guardare YouTube in un altro modo? NewPipe!</p>
 						<span class="TLDR">TLDR: </span>
 						<span class="art_tldr">Funzionalita' di NewPipe, client alternativo all'app stock di YouTube.</span>
 						<p class="rel_tags">#alternative</p>
 					</li>
 					<br>
-					<li>
+					<li class="article">
 						<p class="art_title">Perche' mai un blog personale?</p>
 						<span class="TLDR">TLDR: </span>
 						<span class="art_tldr">I motivi che mi hanno spinto a creare un blog e a non utilizzare i classici social media.</span>
