--- a/index.html
+++ b/index.html
@@ -133,6 +133,7 @@
 		
 		<footer>
 			<p>Contatti: <a href="mailto:brgrv4@tutanota.com">brgrv4@tutanota.com</a></p>
+			<p>Social: <a href="https://linerd.itch.io">itch.io</a></p>
 			<p>Nient'altro? Eh già.</p>
 		</footer>
 
