--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 	<head>
 		<link href="styles/fonts.css" rel="stylesheet">
+		<link href="styles/desktop.css" rel="stylesheet">
 		<link href="styles/main.css" rel="stylesheet">
 		<link href="styles/mobile.css" rel="stylesheet">
 		<link href="favicon.png" type="image/x-icon" rel="icon">
