Ho iniziato a scrivere il primo articolo, preparato il template per gli articoli ma sono ancora da formattare in css, aggiunto il collegamento alla random page e nient'altro

--- a/index.html
+++ b/index.html
@@ -17,15 +17,15 @@
 	</head>
 
 
+
 	<body>
 		
-		<p id="under_con">Sito sotto costruzione🔨🏗️</p>
-
 		<header>
+			<a id="randompage" href="random/random.html">Random ꩜</a>
 			<p id="main_title">This is me.</p>
 			<div>
-				<span id="am1">Per gli amici bro, bruschian, brijian, broski.</span>
-				<span id="am2">Oppure semplicemente Brian.</span>
+				<p id="am1">Per gli amici bro, bruschian, brijian, broski.</p>
+				<p id="am2">Oppure semplicemente Brian.</p>
 				<br>
 				<p id="welcome_line">E benvenuto/a nel mio blog personale.</p>
 				<p id="tpomo">Il mio tratto principale? Odio per masse e omologazioni.</p>
@@ -82,34 +82,9 @@
 				</ul>
 			</div>
 
-
-
-
-
 			<div id="articles">
 				<p id="rec_arts">Articoli recenti:</p>
 				<ul>
-					<li class="article">
-						<p class="art_title">Il mio viaggio alla scoperta della mia distro.</p>
-						<span class="TLDR">TLDR: </span>
-						<span class="art_tldr">A quali sistemi operativi la mia fame di smanettamento mi ha condotto.</span>
-						<p class="rel_tags">#linux</p>
-					</li>
-					<br>
-					<li class="article">
-						<p class="art_title">La scalata del monte Celeste.</p>
-						<span class="TLDR">TLDR: </span>
-						<span class="art_tldr">Recensione del videogioco Celeste, uscito nel 2018.</span>
-						<p class="rel_tags">#gaming</p>
-					</li>
-					<br>
-					<li class="article">
-						<p class="art_title">Guardare YouTube in un altro modo? NewPipe!</p>
-						<span class="TLDR">TLDR: </span>
-						<span class="art_tldr">Funzionalita' di NewPipe, client alternativo all'app stock di YouTube.</span>
-						<p class="rel_tags">#alternative</p>
-					</li>
-					<br>
 					<li class="article">
 						<p class="art_title">Perche' mai un blog personale?</p>
 						<span class="TLDR">TLDR: </span>
@@ -133,9 +108,11 @@
 
 		
 		<footer>
+			<img src="gifs/madewithvi.gif">
 			<p>Contatti: <a href="mailto:brgrv4@tutanota.com">brgrv4@tutanota.com</a></p>
 			<p>Social: <a href="https://linerd.itch.io">itch.io</a></p>
 			<p>Nient'altro? Eh già.</p>
+			<p>È ancora tutto un work-in-progress, quindi c'e' ancora molto spazio per migliorie e correzioni.</p>
 		</footer>
 
 
