Sistemato il template dell'articolo per mobile, sistemato il css generale per il template, cambiato gif a vim e aggiunto il collegamento a vim.org

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 
 		
 		<footer>
-			<img src="gifs/madewithvi.gif">
+			<a target="_blank" href="https://www.vim.org"><img src="gifs/vim.gif"></a> <!-- https://anlucas.neocities.org/vim.gif --></button>
 			<p>Contatti: <a href="mailto:brgrv4@tutanota.com">brgrv4@tutanota.com</a></p>
 			<p>Social: <a href="https://linerd.itch.io">itch.io</a></p>
 			<p>Nient'altro? Eh già.</p>
