Finito e formattato interamente il primo articolo, creato il collegamento all'index, creati i file vuoti per la pagina random.

--- a/index.html
+++ b/index.html
@@ -86,7 +86,9 @@
 				<p id="rec_arts">Articoli recenti:</p>
 				<ul>
 					<li class="article">
-						<p class="art_title">Perche' mai un blog personale?</p>
+						<p class="art_title">
+							<a class="linktitle" href="articles/1. Perche un blog/art1.html">Perche' mai un blog personale?</a>
+						</p>
 						<span class="TLDR">TLDR: </span>
 						<span class="art_tldr">I motivi che mi hanno spinto a creare un blog e a non utilizzare i classici social media.</span>
 						<p class="rel_tags">#thoughts</p>
