Sistemato il dark theme nell'articolo, il ritocchino telegram all'index e finito definitely il random. Tutto e' pronto alla pubblicazione.

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 				<ul>
 					<li class="article">
 						<p class="art_title">
-							<a class="linktitle" href="articles/1. Perche un blog/art1.html">Perche' mai un blog personale?</a>
+							<a class="linktitle" href="articles/1. Perche un blog/art1.html">Perchè mai un blog personale?</a>
 						</p>
 						<span class="TLDR">TLDR: </span>
 						<span class="art_tldr">I motivi che mi hanno spinto a creare un blog e a non utilizzare i classici social media.</span>
@@ -113,8 +113,10 @@
 			<a target="_blank" href="https://www.vim.org"><img src="gifs/vim.gif"></a> <!-- https://anlucas.neocities.org/vim.gif --></button>
 			<p>Contatti: <a href="mailto:brgrv4@tutanota.com">brgrv4@tutanota.com</a></p>
 			<p>Social: <a href="https://linerd.itch.io">itch.io</a></p>
+			<p>Telegram: [fornisce la taq polimerasi]</p>
 			<p>Nient'altro? Eh già.</p>
-			<p>È ancora tutto un work-in-progress, quindi c'e' ancora molto spazio per migliorie e correzioni.</p>
+
+			<p>Everything is a WIP.</p>
 		</footer>
 
 
