--- a/random/random.html
+++ b/random/random.html
@@ -20,9 +20,16 @@
 	<body>
 		<a href="../index.html" id="home">⬅️ Home</a>
 
-		<p id="randomtitle">r@ℕD0M</p>
+		<p id="randomtitle">r@ℕD0m</p>
 
-		<iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/1bG4NCNZd3Go5pNWjH5Wl2?utm_source=generator&theme=0" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+		<div class="row">
+			
+			<img id="nyancat" src="https://i.kym-cdn.com/photos/images/newsfeed/000/114/779/0002.gif" alt="Nyan Cat.">
+
+			<iframe id="alfie" style="border-radius:12px" src="https://open.spotify.com/embed/track/1bG4NCNZd3Go5pNWjH5Wl2?utm_source=generator" width="100%" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+
+		</div>
+
 	</body>
 </html>
 
