Le cartelle degli articoli portano la data di pubblicazione, sistemato l'index, fatto sparire Telegram e aggiunto Matrix (devo aggiungere Mastodon), aggiunte due cose al random.

--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@
 	<body>
 		
 		<header>
+			<span id="noadblock">No Adblocker required!!</span>
 			<a id="randompage" href="random/random.html">Random ꩜</a>
+			
 			<p id="main_title">This is me.</p>
 			<div>
 				<p id="am1">Per gli amici bro, bruschian, brijian, broski.</p>
@@ -84,10 +86,26 @@
 
 			<div id="articles">
 				<p id="rec_arts">Articoli recenti:</p>
+		
 				<ul>
 					<li class="article">
 						<p class="art_title">
-							<a class="linktitle" href="articles/1. Perche un blog/art1.html">Perchè mai un blog personale?</a>
+						<a class="linktitle" href="articles/3. 241023/art.html">Aggiornamenti dall'Università</a>
+						</p>
+						<span class="TLDR">TLDR: </span>
+						<span class="art_tldr">Un paio di aggiornamenti.</span>
+						<p class="rel_tags">#uni</p>
+					</li>
+				</ul>
+	
+
+
+
+
+				<ul>
+					<li class="article">
+						<p class="art_title">
+							<a class="linktitle" href="articles/1. 160923/art.html">Perchè mai un blog personale?</a>
 						</p>
 						<span class="TLDR">TLDR: </span>
 						<span class="art_tldr">I motivi che mi hanno spinto a creare un blog e a non utilizzare i classici social media.</span>
@@ -113,7 +131,7 @@
 			<a target="_blank" href="https://www.vim.org"><img src="gifs/vim.gif"></a> <!-- https://anlucas.neocities.org/vim.gif --></button>
 			<p>Contatti: <a href="mailto:brgrv4@tutanota.com">brgrv4@tutanota.com</a></p>
 			<p>Social: <a href="https://linerd.itch.io">itch.io</a></p>
-			<p>Telegram: [fornisce la taq polimerasi]</p>
+			<p>Matrix: linerd04@matrix.org</p>
 			<p>Nient'altro? Eh già.</p>
 
 			<p>Everything is a WIP.</p>
