--- a/index.html
+++ b/index.html
@@ -132,6 +132,8 @@
 			<p>Contatti: <a href="mailto:brgrv4@tutanota.com">brgrv4@tutanota.com</a></p>
 			<p>Social: <a href="https://linerd.itch.io">itch.io</a></p>
 			<p>Matrix: linerd04@matrix.org</p>
+			<span>Mastodon: </span>
+				<a rel="me" href="https://mastodon.social/@linerd">linerd4</a>
 			<p>Nient'altro? Eh già.</p>
 
 			<p>Everything is a WIP.</p>
