--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 	<body>
 		
 		<header>
-			<span id="noadblock">No Adblocker required!!</span>
+			<span id="noadblock">No Adblocker required!</span>
 			<a id="randompage" href="random/random.html">Random ꩜</a>
 			
 			<p id="main_title">This is me.</p>
@@ -33,7 +33,6 @@
 				<p id="tpomo">Il mio tratto principale? Odio per masse e omologazioni.</p>
 				<p id="snms">Sempre? No. Ma spesso.</p>
 			</div>
-			</details>
 		</header>
 
 	
@@ -116,7 +115,6 @@
 
 
 
-
 		</main>
 
 
@@ -128,15 +126,9 @@
 
 		
 		<footer>
-			<a target="_blank" href="https://www.vim.org"><img src="gifs/vim.gif"></a> <!-- https://anlucas.neocities.org/vim.gif --></button>
-			<p>Contatti: <a href="mailto:brgrv4@tutanota.com">brgrv4@tutanota.com</a></p>
-			<p>Social: <a href="https://linerd.itch.io">itch.io</a></p>
+			<p>Email: <a href="mailto:brgrv4@tutanota.com">brgrv4@tutanota.com</a></p>
 			<p>Matrix: linerd04@matrix.org</p>
-			<span>Mastodon: </span>
-				<a rel="me" href="https://mastodon.social/@linerd">linerd4</a>
-			<p>Nient'altro? Eh già.</p>
-
-			<p>Everything is a WIP.</p>
+			<span>Mastodon: </span><a rel="me" href="https://mastodon.social/@linerd">linerd</a>
 		</footer>
 
 
