--- a/index.html
+++ b/index.html
@@ -114,6 +114,9 @@
 			</div>
 
 
+			<iframe id="mastofeed" allowfullscreen sandbox="allow-top-navigation allow-scripts allow-popups allow-popups-to-escape-sandbox" width="400" height="800" src="https://www.mastofeed.com/apiv2/feed?userurl=https%3A%2F%2Fmastodon.social%2Fusers%2Flinerd&theme=dark&size=100&header=true&replies=false&boosts=false"></iframe>
+
+
 
 		</main>
 
