La pagina principale non sarà più in italiano ma in inglese. Tradotto l'index e devo finire di ritoccare la selezione della lingua.

--- a/index_it.html
+++ b/index_it.html
@@ -7,9 +7,9 @@
 		<link href="styles/mobile.css" rel="stylesheet">
 		<link href="favicon.png" type="image/x-icon" rel="icon">
 
-		<title>Linerd's site</title>
+		<title>Sito di Linerd</title>
 		<meta name="author" content="BRkMeG">
-		<meta name="description" content="My personal site">
+		<meta name="description" content="Il mio sito personale">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<meta charset="UTF-8">
 		<meta lang="it">
@@ -21,34 +21,24 @@
 	<body>
 		
 		<header>
-			<span id="noadblock">
-				No Adblocker required!
-				<br>
-				<span id="language">
-					Viewing page in: 
-					<span id="englang">Eng</span> 
-					<a id="italang" href="index_it.html">Ita</a> 
-				</span>
-			</span>
+			<span id="noadblock">No Adblocker required!</span>
 			<a id="randompage" href="random/random.html">Random ꩜</a>
-
-
-
+			
 			<p id="main_title">This is me.</p>
 			<div>
-				<p id="am1">By friends bro, bruschian, brijian, broski.</p>
-				<p id="am2">Or simply Brian.</p>
+				<p id="am1">Per gli amici bro, bruschian, brijian, broski.</p>
+				<p id="am2">Oppure semplicemente Brian.</p>
 				<br>
-				<p id="welcome_line">And welcome to my personal blog.</p>
-				<p id="tpomo">My main trait? Hate for masses and homologation.</p>
-				<p id="snms">Always? No. But quite often.</p>
+				<p id="welcome_line">E benvenuto/a nel mio blog personale.</p>
+				<p id="tpomo">Il mio tratto principale? Odio per masse e omologazioni.</p>
+				<p id="snms">Sempre? No. Ma spesso.</p>
 			</div>
 		</header>
 
 	
 		<main>
 			<div id="tags">
-				<p id="interests">My interests?</p>
+				<p id="interests">I miei interessi?</p>
 				<ul id="listag">
 					<li class="li1">
 						<a class="tag" href="">#privacy</a>
@@ -94,15 +84,15 @@
 			</div>
 
 			<div id="articles">
-				<p id="rec_arts">Recent articles:</p>
+				<p id="rec_arts">Articoli recenti:</p>
 		
 				<ul>
 					<li class="article">
 						<p class="art_title">
-						<a class="linktitle" href="articles/3. 241023/art.html">Updates from University.</a>
+						<a class="linktitle" href="articles/3. 241023/art.html">Aggiornamenti dall'Università</a>
 						</p>
 						<span class="TLDR">TLDR: </span>
-						<span class="art_tldr">Just a few updates.</span>
+						<span class="art_tldr">Un paio di aggiornamenti.</span>
 						<p class="rel_tags">#uni</p>
 					</li>
 				</ul>
@@ -114,10 +104,10 @@
 				<ul>
 					<li class="article">
 						<p class="art_title">
-							<a class="linktitle" href="articles/1. 160923/art.html">Why the hell a personal blog?</a>
+							<a class="linktitle" href="articles/1. 160923/art.html">Perchè mai un blog personale?</a>
 						</p>
 						<span class="TLDR">TLDR: </span>
-						<span class="art_tldr">The reasons that brought me to create a blog and not using the usual social medias.</span>
+						<span class="art_tldr">I motivi che mi hanno spinto a creare un blog e a non utilizzare i classici social media.</span>
 						<p class="rel_tags">#thoughts</p>
 					</li>
 				</ul>
