Tradotto il primo articolo e sistemato i collegamenti ad essi dagli index.

--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
 				<ul>
 					<li class="article">
 						<p class="art_title">
-							<a class="linktitle" href="articles/1. 160923/art.html">Why the hell a personal blog?</a>
+							<a class="linktitle" href="articles/1. 160923/art_160923_en.html">Why the hell a personal blog?</a>
 						</p>
 						<span class="TLDR">TLDR: </span>
 						<span class="art_tldr">The reasons that brought me to create a blog and not using the usual social medias.</span>
@@ -129,18 +129,9 @@
 
 
 		</main>
-
-
-
-
-
-
-
-
-		
+	
 		<footer>
 			<p>Email: <a href="mailto:brgrv4@tutanota.com">brgrv4@tutanota.com</a></p>
-			<p>Matrix: linerd04@matrix.org</p>
 			<span>Mastodon: </span><a rel="me" href="https://mastodon.social/@linerd">linerd</a>
 		</footer>
 
