Ho dimenticato index_it.html al commit precedente, porca trota

--- a/index_it.html
+++ b/index_it.html
@@ -104,7 +104,7 @@
 				<ul>
 					<li class="article">
 						<p class="art_title">
-							<a class="linktitle" href="articles/1. 160923/art.html">Perchè mai un blog personale?</a>
+							<a class="linktitle" href="articles/1. 160923/art_160923_it.html">Perchè mai un blog personale?</a>
 						</p>
 						<span class="TLDR">TLDR: </span>
 						<span class="art_tldr">I motivi che mi hanno spinto a creare un blog e a non utilizzare i classici social media.</span>
@@ -130,7 +130,6 @@
 		
 		<footer>
 			<p>Email: <a href="mailto:brgrv4@tutanota.com">brgrv4@tutanota.com</a></p>
-			<p>Matrix: linerd04@matrix.org</p>
 			<span>Mastodon: </span><a rel="me" href="https://mastodon.social/@linerd">linerd</a>
 		</footer>
 
