Tradotto il secondo articolo e sistemata la sezione lingue negli index.

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 		<link href="styles/desktop.css" rel="stylesheet">
 		<link href="styles/main.css" rel="stylesheet">
 		<link href="styles/mobile.css" rel="stylesheet">
+		<link href="styles/en_lang.css" rel="stylesheet">
 		<link href="favicon.png" type="image/x-icon" rel="icon">
 
 		<title>Linerd's site</title>
@@ -26,8 +27,8 @@
 				<br>
 				<span id="language">
 					Viewing page in: 
-					<span id="englang">Eng</span> 
-					<a id="italang" href="index_it.html">Ita</a> 
+					<span>Eng</span> 
+					<a href="index_it.html">Ita</a> 
 				</span>
 			</span>
 			<a id="randompage" href="random/random.html">Random ꩜</a>
@@ -99,7 +100,7 @@
 				<ul>
 					<li class="article">
 						<p class="art_title">
-						<a class="linktitle" href="articles/3. 241023/art.html">Updates from University.</a>
+						<a class="linktitle" href="articles/3. 241023/art_241023_en.html">Updates from University.</a>
 						</p>
 						<span class="TLDR">TLDR: </span>
 						<span class="art_tldr">Just a few updates.</span>
