--- a/index_it.html
+++ b/index_it.html
@@ -21,7 +21,19 @@
 	<body>
 		
 		<header>
-			<span id="noadblock">No Adblocker required!</span>
+			<span id="noadblock">
+				No Adblocker required!
+				<br>
+				<span id="language">
+					Stai vedendo la pagina in: 
+					<span>Ita</span> 
+					<a href="index.html">Eng</a> 
+				</span>
+			</span>
+
+
+
+
 			<a id="randompage" href="random/random.html">Random ꩜</a>
 			
 			<p id="main_title">This is me.</p>
@@ -89,7 +101,7 @@
 				<ul>
 					<li class="article">
 						<p class="art_title">
-						<a class="linktitle" href="articles/3. 241023/art.html">Aggiornamenti dall'Università</a>
+						<a class="linktitle" href="articles/3. 241023/art_241023_it.html">Aggiornamenti dall'Università</a>
 						</p>
 						<span class="TLDR">TLDR: </span>
 						<span class="art_tldr">Un paio di aggiornamenti.</span>
