--- a/random/random.html
+++ b/random/random.html
@@ -22,17 +22,22 @@
 
 		<p id="randomtitle">r@ℕD0m</p>
 
+		<div class ="row">
+
+			<img id="brokenMine" src="https://files.mastodon.social/media_attachments/files/111/666/079/631/645/388/original/e6eb44c8149b046c.png">
+
+		</div>
+
 		<div class="row">
 
 			<iframe id="giorgio" style="border-radius:12px" src="https://open.spotify.com/embed/track/0oks4FnzhNp5QPTZtoet7c?utm_source=generator" width="100%" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>	
 
 			<img id="dino" src="https://cdn.pixabay.com/photo/2020/05/11/05/15/chrome-5156508_960_720.png">
-
-
 		
 		</div>
 
 		<div class="row">
+
 			<img id="nyancat" src="https://i.kym-cdn.com/photos/images/newsfeed/000/114/779/0002.gif" alt="Nyan Cat.">
 
 			<iframe id="alfie" style="border-radius:12px" src="https://open.spotify.com/embed/track/1bG4NCNZd3Go5pNWjH5Wl2?utm_source=generator" width="100%" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
@@ -40,5 +45,6 @@
 		</div>
 
 	</body>
+
 </html>
 
