coz yes fuck her

--- a/index_it.html
+++ b/index_it.html
@@ -38,11 +38,11 @@
 			
 			<p id="main_title">This is me.</p>
 			<div>
-				<p id="am1">Per gli amici bro, bruschian, brijian, broski.</p>
+				<p id="am1">Per gli amici bro, bruschian, brijian.</p>
 				<p id="am2">Oppure semplicemente Brian.</p>
 				<br>
 				<p id="welcome_line">E benvenuto/a nel mio blog personale.</p>
-				<p id="tpomo">Il mio tratto principale? Odio per masse e omologazioni.</p>
+				<p id="tpomo">Il mio tratto principale? Odio per l'omologazione.</p>
 				<p id="snms">Sempre? No. Ma spesso.</p>
 			</div>
 		</header>
