--- a/index.html
+++ b/index.html
@@ -37,11 +37,11 @@
 
 			<p id="main_title">This is me.</p>
 			<div>
-				<p id="am1">By friends bro, bruschian, brijian, broski.</p>
+				<p id="am1">By friends bro, bruschian, brijian.</p>
 				<p id="am2">Or simply Brian.</p>
 				<br>
 				<p id="welcome_line">And welcome to my personal blog.</p>
-				<p id="tpomo">My main trait? Hate for masses and homologation.</p>
+				<p id="tpomo">My main trait? Hate for homologation.</p>
 				<p id="snms">Always? No. But quite often.</p>
 			</div>
 		</header>
