Resa più efficiente l'organizzazione degli style

--- a/index_it.html
+++ b/index_it.html
@@ -2,9 +2,9 @@
 <html>
 	<head>
 		<link href="styles/fonts.css" rel="stylesheet">
-		<link href="styles/desktop.css" rel="stylesheet">
-		<link href="styles/main.css" rel="stylesheet">
-		<link href="styles/mobile.css" rel="stylesheet">
+		<link href="styles/index/desktop.css" rel="stylesheet">
+		<link href="styles/index/main.css" rel="stylesheet">
+		<link href="styles/index/mobile.css" rel="stylesheet">
 		<link href="favicon.png" type="image/x-icon" rel="icon">
 
 		<title>Sito di Linerd</title>
