--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html>
 	<head>
 		<link href="styles/fonts.css" rel="stylesheet">
-		<link href="styles/desktop.css" rel="stylesheet">
-		<link href="styles/main.css" rel="stylesheet">
-		<link href="styles/mobile.css" rel="stylesheet">
-		<link href="styles/en_lang.css" rel="stylesheet">
+		<link href="styles/index/desktop.css" rel="stylesheet">
+		<link href="styles/index/main.css" rel="stylesheet">
+		<link href="styles/index/mobile.css" rel="stylesheet">
+		<link href="styles/index/en_lang.css" rel="stylesheet">
 		<link href="favicon.png" type="image/x-icon" rel="icon">
 
 		<title>Linerd's site</title>
