Aggiunto il cimitero e migliorato un paio di altre cosette

--- a/index_it.html
+++ b/index_it.html
@@ -93,6 +93,9 @@
 					</li>
 					<br><br>
 				</ul>
+
+				<a id="grave" href="graveyard/graveyard.html">My broken bonds' graveyard</a>
+
 			</div>
 
 			<div id="articles">
@@ -141,7 +144,7 @@
 
 		
 		<footer>
-			<p>Email: <a href="mailto:brgrv4@tutanota.com">brgrv4@tutanota.com</a></p>
+			<p>Email: <a href="mailto:tint-both-freefall@duck.com">tint-both-freefall@duck.com (alias email)</a></p>
 			<span>Mastodon: </span><a rel="me" href="https://mastodon.social/@linerd">linerd</a>
 		</footer>
 
