--- a/index.html
+++ b/index.html
@@ -92,6 +92,9 @@
 					</li>
 					<br><br>
 				</ul>
+
+				<a id="grave" href="graveyard/graveyard.html">My broken bonds' graveyard</a>
+
 			</div>
 
 			<div id="articles">
@@ -132,7 +135,7 @@
 		</main>
 	
 		<footer>
-			<p>Email: <a href="mailto:brgrv4@tutanota.com">brgrv4@tutanota.com</a></p>
+			<p>Email: <a href="mailto:tint-both-freefall@duck.com">tint-both-freefall@duck.com (mail alias)</a></p>
 			<span>Mastodon: </span><a rel="me" href="https://mastodon.social/@linerd">linerd</a>
 		</footer>
 
